src/passes/02-parsing/jsligo/Tests/contracts/top_level_patterns/negative/jsligo/ticket_tuple.jsligo
const [b, _] = [Option.value_with_error("option not None", Tezos.Next.Ticket.create("one", 10 as nat)), 1];

type storage = ticket<string>;

class C {
  @entry
  main = (_p: unit, _s: storage): [list<operation>, storage] =>
    [[], Option.value_with_error("option is None", Tezos.Next.Ticket.join([b, b]))];
}
